changes, more presentable

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,6 +37,14 @@
    font-weight: bold;
  }
 
+ .app-name {
+   color: rgb(235, 83, 69);
+   font-size: 27px;
+   padding-top: 10px;
+   padding-left: 15em;
+   text-align: center;
+ }
+
  .form-control {
    height: 2em;
  }
