--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,14 +1,14 @@
 <h1>Welcome Page</h1>
 
-<h2> Hi, <%= @dj.name %> (<%= @dj.username %>)!</h2>
+<h2> Hi, <%= @current_dj.name %> (<%= @current_dj.username %>)!</h2>
 
 
 
 <h3>Your Playlists:</h3>
 
-<% if @dj.playlists %>
+<% if @current_dj.playlists %>
 <ul>
-  <% @dj.playlists.each do |playlist| %>
+  <% @current_dj.playlists.each do |playlist| %>
   <li>
     <%= link_to playlist.name, edit_playlist_path %>
   </li>
