--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,9 @@
           <li class="nav-item">
             <%= link_to "Logout", "/logout", method: :delete, class: "nav-link" %>
           </li>
+          <li class="nav-item">
+            <h3 class="app-name">GenreFluid</h3>
+          </li>
         </ul>
 
         <!-- Navbar Links end-->
