add app name to nav

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,7 +41,7 @@
    color: rgb(235, 83, 69);
    font-size: 27px;
    padding-top: 10px;
-   padding-left: 15em;
+   padding-left: 50%;
    text-align: center;
  }
 
