--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -10,7 +10,7 @@
 <ul>
   <% @current_dj.playlists.each do |playlist| %>
   <li>
-    <%= link_to playlist.name, edit_playlist_path %>
+    <%= link_to playlist.name, edit_playlist_path(playlist.id) %>
   </li>
   <% end %>
 </ul>
@@ -21,7 +21,7 @@
 <ul>
   <% @liked_playlists.each do |playlist| %>
   <li>
-    <%= link_to playlist.name, playlist_path %>
+    <%= link_to playlist.name, playlist_path(playlist.id) %>
   </li>
   <% end %>
 </ul>
